# PendulumCart

./: .gitmodules  GenerateQRcode.py  PendulumCart.ipynb  README.md
.ipynb_checkpoints/: PendulumCart-checkpoint.ipynb
cpp/: .gitignore  CMakeLists.txt  Doxyfile  doxy
cpp/gui/: CMakeLists.txt
cpp/gui/src/: CMakeLists.txt
cpp/lib/: mainwindow.cpp  mainwindow.ui
cpp/lib/gui/: .mainwindow.cpp.swp  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
cpp/lib/gui/include/: util.hpp
cpp/lib/gui/src/: util.cpp
cpp/lib/math/: CMakeLists.txt
cpp/lib/math/include/: .Integrator.hpp.swp  .IntegratorSimpleStep.hpp.swp  Integrator.hpp  Integrator2.hpp  IntegratorSimpleStep.hpp  IntegratorSimpleStep2.hpp  oldIntegratorSimpleStep.hpp
cpp/lib/mechanical/: CMakeLists.txt
cpp/lib/mechanical/include/: Mechanical.hpp  Pendulum2d.hpp  Physics.hpp  System.hpp
cpp/lib/mechanical/src/: CMakeLists.txt  Pendulum2d.cpp  Physics.cpp
cpp/lib/simulator/: CMakeLists.txt
cpp/lib/simulator/include/: .Simulator.hpp.swp  Simulator.hpp
cpp/lib/vrep/: CMakeLists.txt
cpp/lib/vrep/include/: VRep.hpp
cpp/lib/vrep/src/: VRep.cpp
cpp/math/: CMakeLists.txt
cpp/math/include/: IntegratorSimpleStep.hpp
cpp/odePendulum/: .cproject  .gitignore  .project  CMakeLists.txt
cpp/odePendulum/include/: Integrator.hpp  IntegratorSimpleStep.hpp  Pendulum2d.hpp  Physics.hpp
cpp/odePendulum/src/: CMakeLists.txt  Pendulum2d.cpp  main.cpp
cpp/src/: .CMakeLists.txt.swp  CMakeLists.txt  OldCMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui
cpp/src/gui/: CMakeLists.txt  GUI.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  oldCMakeLists.txt
cpp/src/gui/src/: GUI.cpp  main.cpp  mainwindow.ui
cpp/src/math/: CMakeLists.txt
cpp/src/mechanical/include/: Pendulum2d.hpp
cpp/test/: .main.cpp.swp  CMakeLists.txt  main.cpp
python/.ipynb_checkpoints/: PendulumCart-checkpoint.ipynb
python/PendulumCart2d/: PendulumCart.ipynb
